--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Сайт мастера бровей и макияжа в ярково и тюмени с набором фото работ и прайс листом на услуги по макияжу и оформлению бровей. Записывайтесь на макияж и перманент бровей">
+    <meta name="description" content="Сайт мастера бровей и макияжа в ярково и тюмени с набором фото работ и прайс листом на услуги. Записывайтесь на макияж и перманент бровей в ярково тюменской области">
     <meta name="keywords" content="ярково, брови, макияж, перманент, ресницы">
     <link rel="stylesheet" href="./css/iconsfont.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -82,6 +82,7 @@
                     <div class="full-screen__text">Magic Brows</div>
                 </div>
             </div>
+
             <div class="container">
                 <div class="content">
                     <div class="about block" id="about">
@@ -204,63 +205,63 @@
                         <div class="swiper-wrapper wow fadeIn">
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Gome</h1>
+                                <h2 class="box__title">Gome</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Оформление</h1>
+                                <h2 class="box__title">Оформление</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Окрашивание</h1>
+                                <h2 class="box__title">Окрашивание</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Перманент бровей</h1>
+                                <h2 class="box__title">Перманент бровей</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Дневной макияж</h1>
+                                <h2 class="box__title">Дневной макияж</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Вечерний макияж</h1>
+                                <h2 class="box__title">Вечерний макияж</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Оформление</h1>
+                                <h2 class="box__title">Оформление</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Оформление</h1>
+                                <h2 class="box__title">Оформление</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h1 class="box__title">Вечерний макияж</h1>
+                                <h2 class="box__title">Вечерний макияж</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
                             <img src="./img/kamila.webp" alt="">
