text-align:center

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                         <input type="tel" class="feedback__item _req _telephone form__input" name="phone" placeholder="8 (999) 999 99 99">
                                         <textarea id="" cols="30" rows="10" class="feedback__item _req form__input" name="message" placeholder="Желаемая процедура или сообщение..."></textarea>
                                         <div class="feedback__message">Можешь выбрать желаемую дату и время</div>
-                                        <input type="datetime-local" class="feedback__item" name="datetime">
+                                        <input type="datetime-local" class="feedback__item feedback__item-time" name="datetime">
                                         <button type="submit" class="feedback__item feedback__buttom" ><span>отправить</span></button>
                                     </form>
                                 </div>
