--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <p class="wow fadeInLeft">Скорее записывайся и экономь свое драгоценное время по утрам &#128522;</p>
                                </div>    
                             <div class="about_image block__image wow fadeInRight">
-                               <img src="./img/kamila.webp" alt="">
+                               <img src="./img/about/about.webp" alt="">
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                                 <img src="./img/portfolio/pFive.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item portfolio__item-big wow fadeInLeft iztf">
-                                <img src="./img/portfolio/pOne-big.webp" alt="" srcset="">
+                                <img src="./img/portfolio/pTwo-big.webp" alt="" srcset="">
                             </div>
                             <div class="portfolio__item wow fadeInUp">
                                 <img src="./img/portfolio/pTwo.webp" alt="" srcset="">
@@ -205,67 +205,47 @@
                         <div class="swiper-wrapper wow fadeIn">
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h2 class="box__title">Gome</h2>
+                                <h2 class="box__title">Пример №1</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
-                            <img src="./img/kamila.webp" alt="">
+                            <img src="./img/myWorks/mwOne.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h2 class="box__title">Оформление</h2>
+                                <h2 class="box__title">Пример №2</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
-                            <img src="./img/kamila.webp" alt="">
+                            <img src="./img/myWorks/mwTwo.webp" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="swiper-slide__box-up box">
+                                <h2 class="box__title">Пример №3</h2>
+                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
+                            </div>
+                            <img src="./img/myWorks/mwThree.webp" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="swiper-slide__box-up box">
+                                <h2 class="box__title">Пример №4</h2>
+                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
+                            </div>
+                            <img src="./img/myWorks/mwFour.webp" alt="">
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="swiper-slide__box-up box">
+                                <h2 class="box__title">Пример №5</h2>
+                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
+                            </div>
+                            <img src="./img/myWorks/mwOne.webp" alt="">
                           </div>
                           <div class="swiper-slide">
                             <div class="swiper-slide__box box">
-                                <h2 class="box__title">Окрашивание</h2>
+                                <h2 class="box__title">Пример №6</h2>
                                 <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
                             </div>
-                            <img src="./img/kamila.webp" alt="">
+                            <img src="./img/myWorks/mwSix.webp" alt="">
                           </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Перманент бровей</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Дневной макияж</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Вечерний макияж</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Оформление</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Оформление</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="swiper-slide__box box">
-                                <h2 class="box__title">Вечерний макияж</h2>
-                                <p class="box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, officia.</p>
-                            </div>
-                            <img src="./img/kamila.webp" alt="">
-                          </div>
+                          
                         </div>
                     </div>
                     <div class="form block">
