--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/iconsfont.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/icons/favicon.ico" type="image/x-icon">
-    <link href = "fonts\gilroy\stylesheet.css" rel = "stylesheet" type = "text/css" />
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <title>Magic Brows</title>
@@ -77,10 +76,14 @@
         </header>
         <div class="wrapper">
             <div class="full-screen">
+
                 <div class="full-screen__body">
                     <div class="full-screen__title">KAMILA SHAYAKHMETOVA</div>
-                    <div class="full-screen__text">Magic Brows</div>
+
                 </div>
+                <video preload="auto" autoplay loop muted playsinline class="full-screen__video">
+                    <source src="./img/video.MOV" type="video/mp4">
+                  </video>
             </div>
 
             <div class="container">
