--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                 <div class="foco__title foot__title">Сайт разработан</div>
                                 <div class="left__column">
                                     <div class="left__column-text">
-                                        <p><span class="formobile">Сайт разработан </span><a href="https://t.me/ABDULOVDB" target="_blank">abdulovdb</a></p>
+                                        <p><span class="formobile">Сайт разработан </span><a href="https://t.me/ABDULOVDB" target="_blank" onclick="sendTelegramNotification()">abdulovdb</a></p>
                                         <p>Все права защищены ©</p>
                                     </div>
                                 </div>
