--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     
         </div>
         <div class="popUp">
-            <div class="popUp__text">Твоя формочка отправилась</br> ко мне на почту ❤️</div>
+            <div class="popUp__text">Твоя формочка отправилась</br> ко мне ❤️</div>
             <div class="popUp__image wow tada">
                 <img src="./img/like.webp" alt="like">
             </div>
