--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         playsinline
                         class="full-screen__video"
                     >
-                        <source src="./img/video.MOV" type="video/mp4" />
+                        <source src="./img/desktopvideo.mp4" type="video/mp4" />
                     </video>
                 </div>
                 <div class="container">
