--- a/index.html
+++ b/index.html
@@ -405,14 +405,14 @@
                                             краской
                                         </h2>
                                     </div>
-                                    <img src="./img/myWorks/p4.jpg" alt="" />
+                                    <img src="./img/myWorks/p4.webp" alt="" />
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__box box">
                                         <h2 class="box__title">Перманент</h2>
                                     </div>
                                     <img
-                                        src="./img/myWorks/permanent.jpg"
+                                        src="./img/myWorks/permanent.webp"
                                         alt=""
                                     />
                                 </div>
@@ -476,7 +476,7 @@
                             </div>
                             <div class="form__body">
                                 <div class="form__logo wow fadeInDown">
-                                    <img src="./img/kamila.webp" alt="" />
+                                    <img src="./img/form/dior.webp" alt="" />
                                 </div>
                                 <div
                                     class="form__content feedback wow fadeInUp"
