--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./css/iconsfont.css" />
         <link
             rel="shortcut icon"
-            href="./img/icons/favicon.ico"
+            href="./img/icons/faviconMB.ico"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./css/animate.css" />
