--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Сайт мастера бровей и макияжа в ярково и тюмени с набором фото работ и прайс листом на услуги. Записывайтесь на макияж и перманент бровей в ярково тюменской области"
+            content="Сайт мастера-визажиста,принимающего в ярково и тюмени. Если хотите записываться на макияж и перманент бровей, то вам сюда"
         />
         <meta
             name="keywords"
