--- a/index.html
+++ b/index.html
@@ -637,6 +637,11 @@
             </div>
         </main>
         <script src="./js/script.js"></script>
+        <script src="./js/menu-burger.js"></script>
+        <script src="./js/hide-menu-burger.js"></script>
+        <script src="./js/time-form.js"></script>
+        <script src="./js/sendForm.js"></script>
+        <script src="./js/telegramm-api.js"></script>
         <script src="./js/wow.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
         <script
