--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
         <div class="body__loader">
             <img src="./img/giphy.gif" alt="" srcset="" />
         </div>
-        <div class="question">
-            <div class="qusetion__text">
-                На данный момент некоторые фотоматериалы могут повторятся ввиду
-                того, что владалец сайта не предоставил полный пакет фото
-            </div>
-            <button class="question__btn" id="questionButton">
-                Продолжить просмотр
-            </button>
-        </div>
         <main class="body__content">
             <header class="header">
                 <div class="header__container">
@@ -153,7 +144,7 @@
                                     class="about__text block__text wow fadeInLeft"
                                 >
                                     <h1 class="wow fadeInLeft">
-                                        Привет ! Меня зовут Камила Шаяхметова и
+                                        Привет ! Меня зовут Шаяхметова Камила и
                                         я являюсь мастером бровистом, а так же
                                         визажистом.
                                     </h1>
@@ -196,7 +187,7 @@
                             <div class="portfolio__items">
                                 <div class="portfolio__item wow fadeInUp">
                                     <img
-                                        src="./img/portfolio/pTwo.webp"
+                                        src="./img/portfolio/portfolio-one.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -205,7 +196,7 @@
                                     class="portfolio__item wow fadeInRight iztf"
                                 >
                                     <img
-                                        src="./img/portfolio/pThree.webp"
+                                        src="./img/portfolio/portfolio-two.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -214,7 +205,7 @@
                                     class="portfolio__item portfolio__item-big wow fadeInLeft"
                                 >
                                     <img
-                                        src="./img/portfolio/pOne-big.webp"
+                                        src="./img/portfolio/portfolio-three.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -222,37 +213,37 @@
 
                                 <div class="portfolio__item wow fadeInUp">
                                     <img
-                                        src="./img/portfolio/pFour.webp"
+                                        src="./img/portfolio/portfolio-four.webp"
                                         alt=""
                                         srcset=""
                                     />
                                 </div>
                                 <div class="portfolio__item wow fadeInRight">
                                     <img
-                                        src="./img/portfolio/pFive.webp"
+                                        src="./img/portfolio/portfolio-five.webp"
                                         alt=""
                                         srcset=""
                                     />
                                 </div>
                                 <div
-                                    class="portfolio__item portfolio__item-big wow fadeInLeft iztf"
+                                    class="portfolio__item portfolio__item-big wow fadeInLeft"
                                 >
                                     <img
-                                        src="./img/portfolio/pTwo-big.webp"
+                                        src="./img/portfolio/portfolio-six.webp"
                                         alt=""
                                         srcset=""
                                     />
                                 </div>
                                 <div class="portfolio__item wow fadeInUp">
                                     <img
-                                        src="./img/portfolio/pTwo.webp"
+                                        src="./img/portfolio/portfolio-seven.webp"
                                         alt=""
                                         srcset=""
                                     />
                                 </div>
                                 <div class="portfolio__item wow fadeInRight">
                                     <img
-                                        src="./img/portfolio/pThree.webp"
+                                        src="./img/portfolio/portfolio-eigth.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -260,7 +251,7 @@
 
                                 <div class="portfolio__item wow fadeInUp iztf">
                                     <img
-                                        src="./img/portfolio/pFour.webp"
+                                        src="./img/portfolio/portfolio-nine.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -269,7 +260,7 @@
                                     class="portfolio__item wow fadeInRight iztf"
                                 >
                                     <img
-                                        src="./img/portfolio/pFive.webp"
+                                        src="./img/portfolio/portfolio-ten.webp"
                                         alt=""
                                         srcset=""
                                     />
@@ -298,7 +289,7 @@
                                         </div>
                                         <div class="table__item">
                                             <div class="table__item-label">
-                                                Корреция перманентного макияжа
+                                                Коррекция перманентного макияжа
                                                 бровей
                                             </div>
                                             <div class="table__item-price">
@@ -412,7 +403,7 @@
                                         <h2 class="box__title">Перманент</h2>
                                     </div>
                                     <img
-                                        src="./img/myWorks/permanent.webp"
+                                        src="./img/myWorks/permanent-gafurova.webp"
                                         alt=""
                                     />
                                 </div>
@@ -459,7 +450,7 @@
                                         </h2>
                                     </div>
                                     <img
-                                        src="./img/myWorks/mwSix.webp"
+                                        src="./img/myWorks/du-ofandokr.webp"
                                         alt=""
                                     />
                                 </div>
