--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                         </div>
                                         <div class="table__item">
                                             <div class="table__item-label">
-                                                Вечерний макияж
+                                                Макияж
                                             </div>
                                             <div class="table__item-price">
                                                 1600
@@ -306,10 +306,10 @@
                                         </div>
                                         <div class="table__item">
                                             <div class="table__item-label">
-                                                Дневной макияж
+                                                Свадебный макияж
                                             </div>
                                             <div class="table__item-price">
-                                                1300
+                                                2500
                                             </div>
                                         </div>
                                         <div class="table__item">
