--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                                 Счастье для бровей
                                             </div>
                                             <div class="table__item-price">
-                                                200
+                                                Бесплатно
                                             </div>
                                         </div>
                                     </div>
