--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             name="keywords"
             content="ярково, брови, макияж, перманент, ресницы"
         />
+        <meta name="yandex-verification" content="62fccb6a0af1e93d" />
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/iconsfont.css" />
         <link
