--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
         />
-        <title>Magic Brows</title>
+        <title>Shah Brows</title>
     </head>
     <body>
         <div class="body__loader">
