--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                                                 <span class="formobile"
                                                     >Сайт разработан </span
                                                 ><a
-                                                    href="https://www.abdulovdb.com/"
+                                                    href="https://abdulovdb-com.vercel.app/"
                                                     target="_blank"
                                                     onclick="sendTelegramNotification()"
                                                     >abdulovdb</a
