--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                                 target="_blank"
                                                 class="a_adress"
                                                 >с.Ярково, ул.Пионерская,
-                                                д.85, оффис 216</a
+                                                д.85, офис 216</a
                                             >
                                         </li>
                                     </ul>
